<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dearlhd.myapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/adFlipper"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#f3e2f4"
            android:flipInterval="3000"
            android:inAnimation="@anim/right_in"
            android:outAnimation="@anim/right_out">

            <include layout="@layout/ad1" />

            <include layout="@layout/ad2" />

            <include layout="@layout/ad3" />

        </ViewFlipper>

        <LinearLayout
            android:id="@+id/ly_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/bg_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_channel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/tab_menu_channel"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tab_menu_alert"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/tab_menu_message"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tab_menu_profile"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_better"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/tab_menu_better"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tab_menu_pay"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/tab_menu_setting"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tab_menu_setting"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/div_white"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ly_content">

        </FrameLayout>

    </LinearLayout>

</ScrollView>
